--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "gatsby-transformer-sharp": "^2.1.4",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "styled-components": "^4.0.3"
   },
   "keywords": [
     "JAMstack"
