--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-sharp": "^2.0.7",
     "gatsby-plugin-typography": "^2.2.1",
     "gatsby-source-filesystem": "^2.0.4",
+    "gatsby-source-meetup": "^0.0.1",
     "gatsby-transformer-sharp": "^2.1.4",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
