--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-source-filesystem": "^2.0.4",
     "gatsby-source-meetup": "^0.0.1",
     "gatsby-transformer-sharp": "^2.1.4",
+    "netlify-lambda": "^1.1.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
