--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sharp": "^2.0.12",
     "gatsby-plugin-typography": "^2.2.1",
+    "gatsby-source-contentful": "^2.0.26",
     "gatsby-source-filesystem": "^2.0.4",
     "gatsby-source-meetup": "^0.0.1",
     "gatsby-transformer-sharp": "^2.1.4",
