--- a/packages/gatsby-theme-jamstack-meetup/package.json
+++ b/packages/gatsby-theme-jamstack-meetup/package.json
@@ -11,6 +11,7 @@
     "gatsby-image": "^2.0.15",
     "gatsby-plugin-manifest": "^2.0.5",
     "gatsby-plugin-offline": "^2.0.11",
+    "gatsby-plugin-page-creator": "^2.1.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sharp": "^2.0.12",
     "gatsby-plugin-styled-components": "^3.0.5",
