--- a/site/package.json
+++ b/site/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "gatsby": "^2.13.12",
-    "gatsby-theme-jamstack-meetup": "*",
+    "@matthieuauger/gatsby-theme-meetup": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
