--- a/packages/@matthieuauger/gatsby-theme-meetup/package.json
+++ b/packages/@matthieuauger/gatsby-theme-meetup/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@matthieuauger/gatsby-theme-meetup",
   "description": " Gatsby Meetup Theme",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "author": "Matthieu Auger <matthieua@theodo.fr>",
   "contributors": [
     "Nicolas Goutay <nicolasgo@theodo.fr>"
@@ -31,7 +31,8 @@
   },
   "keywords": [
     "gatsby",
-    "theme",
+    "gatsby-theme",
+    "gatsby-plugin",
     "meetup"
   ],
   "license": "MIT",
