:pen: Rename generic  with meetup name

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "private": true,
   "workspaces": [
-    "site",
+    "jamstack-london",
     "packages/@matthieuauger/gatsby-theme-meetup"
   ]
 }
