Move website to -demo namespace

--- a/jamstack-london-demo-website/package.json
+++ b/jamstack-london-demo-website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jamstack-london",
+  "name": "jamstack-london-demo-website",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
