--- a/jamstack-paris-demo-website/package.json
+++ b/jamstack-paris-demo-website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jamstack-paris",
+  "name": "jamstack-paris-demo-website",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
